--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "vue-data-component",
   "version": "1.0.0-alpha.1",
   "description": "A straightforward Vue component to filter, sort and paginate data",
-  "main": "dist/index.js",
-  "jsnext:main": "src/index.js",
+  "browser": "dist/vue-data-component.js",
+  "main": "dist/vue-data-component.common.js",
+  "module": "dist/vue-data-component.esm.js",
   "scripts": {
-    "dev": "babel src --watch --out-dir dist",
-    "build": "babel src --out-dir dist",
+    "build": "rollup -c && size-limit",
+    "dev": "rollup -c -w",
     "prepublish": "npm run build",
     "lint": "eslint src --fix",
     "format": "prettier --write 'src/**/*.js' 'tests/**/*.js' 'example/pages/**/*.vue'",
-    "test": "jest"
+    "test": "jest",
+    "size": "size-limit"
   },
   "repository": {
     "type": "git",
@@ -30,15 +32,25 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.16",
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.0",
     "eslint-config-prettier": "^2.9.0",
     "jest": "^23.1.0",
     "prettier": "^1.13.0",
+    "rollup": "^0.60.1",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-uglify": "^4.0.0",
+    "size-limit": "^0.18.2",
     "vue": "^2.5.0",
     "vue-template-compiler": "^2.5.16"
-  }
+  },
+  "size-limit": [
+    {
+      "limit": "1.5 KB",
+      "path": "dist/vue-data-component.min.js"
+    }
+  ]
 }
