Basic pagination; swapi example

--- a/example/package.json
+++ b/example/package.json
@@ -3,6 +3,7 @@
         "dev": "nuxt"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "nuxt": "^1.4.0",
         "vue": "^2.5.16"
     }
