--- a/example/package.json
+++ b/example/package.json
@@ -1,11 +1,11 @@
 {
-    "scripts": {
-        "dev": "nuxt"
-    },
-    "dependencies": {
-        "animated-scroll-to": "^1.2.2",
-        "axios": "^0.18.0",
-        "nuxt": "^1.4.0",
-        "vue": "^2.5.16"
-    }
+  "scripts": {
+    "dev": "nuxt"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "nuxt": "^1.4.0",
+    "tailwindcss": "^0.6.1",
+    "vue": "^2.5.16"
+  }
 }
