Query string wip

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "peerDependencies": {
     "vue": "^2.5.0"
   },
+  "optionalDependencies": {
+    "query-string": "^6.1.0"
+  },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.16",
     "babel-core": "^6.26.0",
@@ -40,6 +43,7 @@
     "eslint-config-prettier": "^2.9.0",
     "jest": "^23.1.0",
     "prettier": "^1.13.0",
+    "query-string": "^6.1.0",
     "rollup": "^0.60.1",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-uglify": "^4.0.0",
@@ -49,11 +53,8 @@
   },
   "size-limit": [
     {
-      "limit": "2 KB",
+      "limit": "5 KB",
       "path": "dist/vue-data-component.min.js"
     }
-  ],
-  "dependencies": {
-    "query-string": "^6.1.0"
-  }
+  ]
 }
