--- a/.eslintrc
+++ b/.eslintrc
@@ -3,13 +3,7 @@
         "eslint:recommended",
         "prettier"
     ],
-    "parserOptions": {
-        "ecmaVersion": 2017,
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true
-        },
-        "sourceType": "module"
-    },
+    "parser": "babel-eslint",
     "env": {
         "browser": true,
         "node": true,
