--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "qs": "^6.5.2",
     "rollup": "^0.60.1",
     "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-uglify": "^4.0.0",
     "size-limit": "^0.18.2",
@@ -65,6 +66,8 @@
     }
   ],
   "dependencies": {
-    "deepmerge": "^2.1.1"
+    "deepmerge": "^2.1.1",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2"
   }
 }
