--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "@vue/test-utils": "^1.0.0-beta.16",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.6",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.0",
     "eslint-config-prettier": "^2.9.0",
