--- a/.babelrc
+++ b/.babelrc
@@ -6,14 +6,14 @@
                     ">0.25%",
                     "not ie 11",
                     "not op_mini all"
-                ],
-                "uglify": true
+                ]
             },
             "modules": false
         }]
     ],
     "plugins": [
-        "babel-plugin-transform-object-rest-spread"
+        "babel-plugin-transform-object-rest-spread",
+        "transform-vue-jsx"
     ],
     "env": {
         "test": {
