--- a/package.json
+++ b/package.json
@@ -34,28 +34,32 @@
     "qs": "^6.5.2"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.16",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.6",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "babel-core": "^7.0.0-bridge",
+    "babel-eslint": "^9.0.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-plugin-transform-vue-jsx": "^4.0.1",
     "eslint": "^4.19.0",
     "eslint-config-prettier": "^2.9.0",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "prettier": "^1.13.0",
     "qs": "^6.5.2",
     "rollup": "^0.60.1",
-    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-uglify": "^4.0.0",
     "size-limit": "^0.18.2",
-    "vue": "^2.5.0",
-    "vue-template-compiler": "^2.5.16"
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.5.17"
+  },
+  "resolutions": {
+    "babel-core": "^7.0.0-bridge"
   },
   "jest": {
     "testPathIgnorePatterns": [
