add qs as a dependency instead of optional dependency

--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
   "peerDependencies": {
     "vue": "^2.5.0"
   },
-  "optionalDependencies": {
-    "qs": "^6.5.2"
-  },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/plugin-external-helpers": "^7.0.0",
@@ -48,7 +45,6 @@
     "eslint-config-prettier": "^2.9.0",
     "jest": "^23.6.0",
     "prettier": "^1.13.0",
-    "qs": "^6.5.2",
     "rollup": "^0.60.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.6",
@@ -73,6 +69,7 @@
     }
   ],
   "dependencies": {
-    "deepmerge": "^2.1.1"
+    "deepmerge": "^2.1.1",
+    "qs": "^6.5.2"
   }
 }
