--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "url": "https://github.com/spatie/vue-data-component/issues"
   },
   "homepage": "https://github.com/spatie/vue-data-component",
+  "dependencies": {
+    "deepmerge": "^2.1.1",
+    "qs": "^6.5.2"
+  },
   "peerDependencies": {
-    "qs": "^6.5.2",
     "vue": "^2.5.0"
   },
   "devDependencies": {
@@ -46,7 +49,6 @@
     "eslint-config-prettier": "^2.9.0",
     "jest": "^23.6.0",
     "prettier": "^1.13.0",
-    "qs": "^6.5.2",
     "rollup": "^0.60.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.6",
@@ -66,11 +68,8 @@
   },
   "size-limit": [
     {
-      "limit": "5 KB",
+      "limit": "8 KB",
       "path": "dist/vue-data-component.min.js"
     }
-  ],
-  "dependencies": {
-    "deepmerge": "^2.1.1"
-  }
+  ]
 }
